# ADC-Signal-Filtering

./: CMakeLists.txt  README.md
inc/: adc_signal_filtering.h  main.h
result-plotting/: result_plotting.py
src/: adc_signal_filtering.c  main.c
text-file-data/: filtered_values.txt  raw_values.txt
